<resources>
    <string name="app_name">My App</string>
    <string name="bmi_calc">Bmi Kalkultor</string>
    <string name="calorie_calc">Kalkultor kalorii</string>>
    <string name="covid19_diet">Dieta na Coronawirusa</string>>
    <string name="covid19_quiz">Quiz o Coronawirusie</string>>
    <string name="covid19_charts">Sattystyki o Coronawirusie</string>>
    <string name="action_settings">Settings</string>
    <string name="weight_description">Waga:</string>
    <string name="high__description">Wzrost:</string>
    <string name="age_description">Wiek:</string>
    <string name="gender_description">Płeć:</string>>
    <string name="weight">waga</string>
    <string name="high">wzrost</string>
    <string name="age">wiek</string>
    <string name="bmi_value">Wartość BMI:</string>
    <string name="calories_val">Zapotrzebwanie organizu na energię [kcal]:</string>
    <string name="diet_info">Do wskazania dety dla Ciebie potrzebne jest twoje BMI.</string>
    <string name="calories">kcal</string>>
    <string name="bmi">BMI</string>
    <string name="your_diet">Twoja dieta</string>>
    <string name="descripton">Opis</string>
    <string name="calculate">Oblicz</string>
    <string name="back">Powrót</string>
    <string name="calculate_diet">Sprawdź dietę dla Ciebie</string>>
    <string name="bmi_now">Sprawdź swoje BMI</string>>
    <string name="title_activity_start">StartActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="title_activity_calorie_calc">CalorieCalcActivity</string>
    <string name="title_activity_covid19_diet">Covid19DietActivity</string>
    <string name="image1">my_image</string>
    <string name="male">mężczyzna</string>
    <string name="female">kobieta</string>
    <string name="title_activity_quiz">QuizActivity</string>
    <string name="title_activity_charts">ChartsActivity</string>
    <string name="answer4">Answer 4</string>
    <string name="answer3">"Answer 3 "</string>
    <string name="answer2">Answer 2</string>
    <string name="answer1">Answer 1</string>
    <string name="score">Score</string>
    <string name="question">Question</string>
    <string name="poland">Poland</string>
    <string name="china">China</string>
    <string name="italy">Italy</string>
</resources>
