<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior">

    <Button
        android:id="@+id/quiz_back"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="4dp"
        android:text="@string/back"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/score"
        android:layout_width="358dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="76dp"
        android:gravity="center"
        android:text="@string/score"
        android:textSize="24sp"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="-4dp" />

    <TextView
        android:id="@+id/question"
        android:layout_width="348dp"
        android:layout_height="157dp"
        android:layout_marginTop="20dp"
        android:gravity="center"
        android:text="@string/question"
        android:textSize="24sp"
        app:layout_constraintTop_toBottomOf="@+id/score"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="6dp" />

    <Button
        android:id="@+id/answer1"
        android:layout_width="358dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:gravity="center"
        android:text="@string/answer1"
        app:layout_constraintTop_toBottomOf="@+id/question"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="1dp" />

    <Button
        android:id="@+id/answer2"
        android:layout_width="358dp"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/answer2"
        app:layout_constraintTop_toBottomOf="@+id/answer1"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="1dp" />

    <Button
        android:id="@+id/answer3"
        android:layout_width="358dp"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/answer3"
        app:layout_constraintTop_toBottomOf="@+id/answer2"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="1dp" />

    <Button
        android:id="@+id/answer4"
        android:layout_width="358dp"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/answer4"
        app:layout_constraintTop_toBottomOf="@+id/answer3"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="1dp" />

</androidx.constraintlayout.widget.ConstraintLayout>
